# NovaCord-py

./: LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
docs/: conf.py
docs/ezcord/: times.rst
docs/pages/: contributing.rst  getting_started.rst
examples/: custom_ready_event.py  dpy.py  dropdown_paginator.py  embed_templates.py  help_command.py  logs.py  pycord.py
examples/database/: postgres.py  sqlite.py
examples/localization/: example_cog.py  main.py
ezcord/: __init__.py
novacordpy/: __init__.py
