[project]
name = "novacordpy"
version = "0.1.0"
description = "An easy-to-use extension for Discord.py and Pycord"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["discord", "pycord", "discord.py"]
authors = [
    { name = "atpascal07" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "discord.py>=2.0.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=5.0.0",
    "furo>=2023.7.26",
]

[project.urls]
Homepage = "https://github.com/NovaCord-at/NovaCord-py"
Documentation = "https://novacord-at.github.io/NovaCord-py/"

[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"
